--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^4.2.0",
     "knex": "^0.20.11",
-    "pg": "^7.18.2"
+    "mocha": "^7.1.0",
+    "pg": "^7.18.2",
+    "supertest": "^4.0.2"
   }
 }
