--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "migrate-make": "knex migrate:make",
     "seed": "knex seed:run",
+    "migrate-latest": "knex migrate:latest",
     "test-utils": "mocha spec/utils.spec.js",
     "test": "mocha spec/app.spec.js"
   },
