added migrate-rollback to test script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "migrate-make": "knex migrate:make",
-    "seed": "knex seed:run",
+    "migrate-rollback": "knex migrate:rollback",
     "migrate-latest": "knex migrate:latest",
+    "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
     "test": "mocha spec/app.spec.js"
   },
