--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "knex": "^0.20.11",
+    "minimst": "0.0.1-security",
     "mocha": "^7.1.0",
     "pg": "^7.18.2",
     "supertest": "^4.0.2"
