building first end point - get topics - current 500 server error

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "url": "https://github.com/northcoders/be-nc-news/issues"
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
-  "dependencies": {},
+  "dependencies": {
+    "chai-sorted": "^0.2.0",
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "knex": "^0.20.11",
